[package]
name = "convers"
version = "0.1.4"
license = "MIT"
description = "Cool convert library that converts almost everything(not yet)."
edition = "2021"
documentation = "https://docs.rs/convers"
repository = "https://github.com/veaquer/convers"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.132"
regex = "1.11.1"
